Ensure that with PlzNavigate, reloads after process crash display the RenderView.

BUG=699384
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_site_isolation

Review-Url: https://codereview.chromium.org/2753093002
Cr-Commit-Position: refs/heads/master@{#457626}

Former-commit-id: 8e07fc9bf21eaec35f94de57f9ba20cc5a9b009e